# wave-insitu

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
config/: data_dirs.yaml  mapping.yaml  saildrone_dirs.yaml  wind_faozi.cpt
scripts/: build_insitu_catalog.py  build_map_from_catalog.py
wave_insitu/: __init__.py  utils.py
wave_insitu/loaders/: __init__.py  kub.py  ldl.py  saildrone.py  tc.py
wave_insitu/visualization/: __init__.py  map.py
